# rif2graph

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  RIF2GRAPH_TECHNICAL_DETAILS.md  demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_temp.txt  update.sh
.github/workflows/: tests.yml  update-graph.yml
src/gene_rif_graph/: __init__.py  filters.py  graph.py  ingest.py  nlp.py  normalize.py
src/gene_rif_graph/scripts/: __init__.py  analyze_graph.py  build_graph.py  download_data.py  extract_triplets.py
tests/: conftest.py  test_graph.py  test_ingest.py  test_nlp.py
